# markov

./: CMakeLists.txt  README.md  twisted-spoon.js
cmake/: add_autoload.py  gdb.cmake  nodejs.cmake  test.cmake
examples/twisted-spoon/: README.md  script.js
gdb/: autoload.py
node/: CMakeLists.txt
node/src/: dist_ext.cpp  dist_weight_ext.cpp  extension.h  napi.cpp  napi.h  trans_ext.cpp  trans_weight_ext.cpp
node/test/: distribution.spec.cjs  distribution_weights.spec.cjs  distribution_weights.spec.js  transition.spec.cjs  transition_weight.spec.cjs
src/: distribution.cpp  distribution_weights.cpp  markov.h  priv.h  transition.cpp  transitions_weights.cpp
src/nodejs/: dist_ext.cpp  dist_weight_ext.cpp  extension.cpp  extension.h  napi.cpp  napi.h  trans_ext.cpp  trans_weight_ext.cpp
tests/: distribution.cpp  distribution_weights.cpp  next_state.cpp  transition.cpp  transition_weights.cpp
